--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
     <td><input type="checkbox" /></td>
   </tr>
 </table>
-
+```suggestion
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
+```
+Make the end game experience more friendly
+
 <button id="play-again" hidden>Play again</button>
 
 <script>
